# citest

./: .coverage  .gitignore  .readthedocs.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml  static.yml
citest/: __init__.py  hello.py
citest/tests/: add_test.py
